adverpos/style.css
.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.clearfix {
  display: inline-block;
}
html[xmlns] .clearfix {
  display: block;
}
* html .clearfix {
  height: 1%;
}
body {
  margin: 0;
  font-family: 'Andale Mono', monospace;
  background-color: #80807F;
  color: #EEE;
  min-width: 950px;
  height:100vh;
  min-height: 630px;
  width:100vw;
}
ul li {
  list-style-type: none;
  margin: .5em 0;
  opacity: .7;
}
li:hover {
  color: white;
  opacity: 1;
}
ul {
  margin-left: 0;
  -webkit-margin-before: 0px;
  -webkit-padding-start: 0px;
}
a {
  text-decoration: none;
}
.top {
  padding-top: 40px;
  width: 100%;
  min-height: 370px;
  overflow: hidden;
  background-color: #DDD;
  position: relative;
  padding-bottom: 25px;
}
.top .center {
  width: 1200px;
  margin: 10px auto;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  justify-content: center;
}
.top .topImage {
  /*  position:absolute;*/
  height: 200px;
  overflow: hidden;
  margin: 40px 3%;
  float: left;
  background-size: cover;
}
.topImage a{
  display: block;
  width:100%;
  height:100%;
}
.top #left {
  background-position: 0px;
  width: 25%;
  background-image: url("imgs/nicole_thumbnail.jpg");
}
.top #middle {
  width: 17%;
  background-position: 80%;
  background-image: url("imgs/wilson_thumbnail.jpg");
}
.top #right {
  background-position: 0px;
  width: 25%;
  background-image: url("imgs/nicole_adCollection_thumbnail.jpg");
}
.top img {
  min-width: 950px;
  max-width: 1200px;
  display: block;
  width: 100%;
  margin: 0 auto;
}
.button {
  padding: 10px;
  max-width: 180px;
  width: 210px;
  height: 18px;
  min-width: 130px;
  font-size: 18px;
  line-height: 18px;
  text-transform: uppercase;
  text-align: center;
  color: #80807F;
  border-style: solid;
  margin: 25px auto 0;
  margin-bottom: 30px;
  opacity: .3;
  transition: 1s;
  -webkit-animation-timing-function: ease;
}

.button:hover{
  opacity: 1;
}
.container {
  padding-top: 30px;
  width: 820px;
  margin: 0 auto;
}
.container .content {
  width: 620px;
  margin-left: 20px;
}
.txt {
  min-height: 420px;
  min-width: 620px;
  margin-bottom: 80px;
}
h5 {
  font-size: 16px;
  line-height: 1.6;
}
h5 .title {
  font-size: 22px;
  line-height: 1.6;
}
.container p {
  font-size: 14px;
  line-height: 1.42;
  margin-bottom: 2em;
  width: 100%;
  text-align: left;
}
q {
  font-size: 14px;
  line-height: 1.42;
  display: block;
}
.citation {
  margin: 2em 1em 2em 0em;
}
.side {
  position: relative;
  left: 30px;
  top: -515px;
  width: 0px;
  float: right;
  margin: 0px -10px 0 -5px;
}
.side img {
  height: 120px;
  margin: 5px;
  margin-bottom: 20px;
  border: #CCC;
  border-style: solid;
  border-width: 1px;
}
.modelView {
  position: relative;
  z-index: 100;
  /*	max-width:1500px;*/
  margin: 0 auto;
}
video {
  width: 500px;
  display: none;
  top: -50%;
}
#video {
  margin: 0 auto;
  width: 500px;
}
.middle {
  display: table-cell;
  vertical-align: middle;
}
#imageDisplay {
  width: 100%;
  height: 100%;
  display: table;
  background-size: cover;
  background-repeat: no-repeat;
}
.zoom{
  visibility: hidden;
  position:fixed;
  top:0;
  left:0;
}
@keyframes fadeto {
  0% {
    opacity: 1;
  }
  50% {
    opacity: .5;
  }
  100% {
    opacity: 1;
  }
}
.nicoleStill {
  background-image: url("imgs/nicole_still.jpg");
}
.nicoleDetail {
  background-image: url("imgs/nicole_detail.jpg");
}
.nicoleAdCollection {
  background-image: url("imgs/nicole_adCollection.jpg");
}
.wilsonStill {
  background-image: url("imgs/wilson_still.jpg");
}
.wilsonDetail {
  background-image: url("imgs/wilson_detail.jpg");
}
.wilsonAdCollection {
  background-image: url("imgs/wilson_adCollection.jpg");
}
#nicole .items {
  color: #80807F;
}
#wilson .items {
  color: white;
}
.items {
  position: absolute;
  left: 20px;
  top: 20px;
  z-index: 10;
  text-transform: uppercase;
  text-shadow: 0 0 10px black;
}
.items img {
  width: 100px;
  display: none;
}
.current:before {
  content: '-';
  display: inline-block;
  margin: 0 2px -3px -12px;
  padding-right: -4px;
}
.menu {
  position: absolute;
  height: 50px;
  bottom: 70px;
  left: 20px;
  opacity: .8;
  z-index: 100;
  text-shadow: 0 0 10px black;
}
.menu:hover {
  opacity: 1;
}
.menu a {
  text-decoration: none;
  color: inherit;
}
.menu a:hover {
  text-decoration: underline;
}
.menu img {
  filter: grayscale(50%);
  width: 80px;
  border-style: solid;
  background-color: #80807F;
}
.menu img:hover {
  filter: none;
}
.menu p {
  text-transform: uppercase;
}
.intro {
  font-size: 12px;
  position: absolute;
  bottom: 30px;
  width: 250px;
  right: 30px;
  line-height: 1.4em;
  padding: 1em;
}
.intro span {
  font-size: 24px;
}
.gallery {
  margin-bottom: 40px;
}
.gallery img {
  height: 95px;
  margin: 10px;
}

